[Done] main page + background

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">Larble</string>
+    <string name="login">Login</string>
+    <string name="email">email</string>
+    <string name="password">password</string>
+    <string name="sign_up">sign up</string>
+    <string name="larble">LARBLE</string>
+    <string name="username">Username</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="multiplayer">MULTIPLAYER</string>
+    <string name="scoreboard">Scoreboard</string>
+    <string name="settings">SETTINGS</string>
+    <string name="single_player">SINGLE PLAYER</string>
+    <string name="easy">easy</string>
+    <string name="medium">medium</string>
+    <string name="hard">hard</string>
+    <string name="enter_the_code_of_a_valid_game">enter the code of a valid game</string>
+    <string name="new_game">new game</string>
+    <string name="play">play</string>
+    <string name="share_this_code_with_your_friend">share this code with your friend</string>
 </resources>
