--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="new_game">new game</string>
     <string name="play">play</string>
     <string name="share_this_code_with_your_friend">share this code with your friend</string>
+    <string name="check">check</string>
 </resources>
