[Edit] Logout button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="play">Join a game</string>
     <string name="share_this_code_with_your_friend">Share this code with your friend</string>
     <string name="check">check</string>
+    <string name="log_out">Log out</string>
 </resources>
