[EDIT] profile picture

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="pass">Password: *********</string>
     <string name="change_username">change_username</string>
     <string name="change_username1">change username</string>
+    <string name="picture">picture</string>
 </resources>
