--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="change_username">change_username</string>
     <string name="change_username1">change username</string>
     <string name="picture">picture</string>
+    <string name="_1_2_players">1/2 PLAYERS</string>
 </resources>
