--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="picture">picture</string>
     <string name="_1_2_players">Players found 1/2</string>
     <string name="searching_the_game">Searching the game</string>
+    <string name="plus">+</string>
 </resources>
