[EDIT] change logo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="_1_2_players">Players found 1/2</string>
     <string name="searching_the_game">Searching the game</string>
     <string name="plus">+</string>
+    <string name="logo">logo</string>
 </resources>
