--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="searching_the_game">Searching the game</string>
     <string name="plus">+</string>
     <string name="logo">logo</string>
+    <string name="leaderboard">Leaderboard</string>
 </resources>
