--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,7 @@
     <string name="plus">+</string>
     <string name="logo">logo</string>
     <string name="leaderboard">Leaderboard</string>
+    <string name="icon">icon</string>
+    <string name="score">Score</string>
+    <string name="wins">Wins</string>
 </resources>
