--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Larble</string>
     <string name="login">Login</string>
     <string name="email">Email</string>
@@ -27,7 +27,7 @@
     <string name="change_username">change_username</string>
     <string name="change_username1">change username</string>
     <string name="picture">picture</string>
-    <string name="_1_2_players">Players found 1/2</string>
+    <string name="_1_2_players" tools:ignore="TypographyFractions">Players found 1/2</string>
     <string name="searching_the_game">Searching the game</string>
     <string name="plus">+</string>
     <string name="logo">logo</string>
