--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Larble</string>
-    <string name="login">Login</string>
+    <string name="login">Sign in</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="sign_up">sign up</string>
